Add i18n support to About, Team, Footer, and forms || API NE RABOTI  NE PIPAI
Refactored multiple components to use translations from i18n files, replacing hardcoded strings with translation keys. Updated bg.json and en.json with new keys for About, Team, Footer, Cars, History, JoinUs, Contacts, and validation messages. This improves localization and maintainability across the app.

--- a/frontend/src/i18n/bg.json
+++ b/frontend/src/i18n/bg.json
@@ -7,6 +7,49 @@
     "sponsors": "Спонсори"
   },
 
+  "sponsors": {
+    "heroBadge": "ПАРТНИРАЙТЕ С НАС",
+    "heroTitle": "Ускорете успеха с",
+    "heroTitleSuffix": "TU Sofia Racing",
+    "heroDescription": "Присъединете се към нашия елитен кръг партньори и помогнете да оформим бъдещето на инженерството в моторните спортове",
+    "showcaseTitle": "Нашите ценни партньори",
+    "showcaseDescription": "Гордеем се, че си сътрудничим с лидери в индустрията, които споделят нашата страст към иновациите и съвършенството",
+    "partnersLabel": "Партньори",
+    "becomePartnerTitle": "Станете наш партньор",
+    "becomePartnerDescription": "Готови ли сте да ускорите вашата марка с нас? Попълнете формата по-долу и нека създадем нещо впечатляващо заедно",
+    "tiers": {
+      "title": {
+        "name": "Титулярен спонсор",
+        "description": "Нашите премиерни партньори, които движат успеха ни"
+      },
+      "gold": {
+        "name": "Златен спонсор",
+        "description": "Основни контрибутори към нашето състезателно съвършенство"
+      },
+      "bronze": {
+        "name": "Бронзов спонсор",
+        "description": "Важни партньори в нашата състезателна екосистема"
+      }
+    },
+    "form": {
+      "applicationProgress": "Напредък на кандидатурата",
+      "submit": "Изпрати запитване за спонсорство",
+      "submitting": "Изпращане...",
+      "labels": {
+        "companyName": "Име на компанията",
+        "contactPerson": "Контактно лице",
+        "email": "Имейл",
+        "phone": "Телефон",
+        "tier": "Ниво на спонсорство",
+        "description": "Детайли за спонсорството"
+      },
+      "selectTierPlaceholder": "Изберете ниво на спонсорство",
+      "tierHint": "Можете също да кликнете върху ниво по-горе, за да го изберете автоматично",
+      "successTitle": "Запитването за спонсорство е изпратено!",
+      "successMessage": "Благодарим ви за интереса към спонсориране на нашия екип. Ще прегледаме информацията и ще се свържем с вас скоро."
+    }
+  },
+
   "home": {
     "since": "От 2015",
     "titleLine1": "ТУ София",
@@ -165,7 +208,13 @@
       "sendMessage": "Изпрати съобщение",
       "sending": "Изпращане...",
       "messageSentTitle": "Съобщението е изпратено!",
-      "messageSentDescription": "Благодарим ви за вашето съобщение. Ще се свържем с вас скоро."
+      "messageSentDescription": "Благодарим ви за вашето съобщение. Ще се свържем с вас скоро.",
+      "placeholders": {
+        "firstName": "Иван Иванов",
+        "email": "ivan@example.com",
+        "subject": "Запитване за спонсорство",
+        "message": "Вашето съобщение..."
+      }
     },
     "findUsTitle": "Намерете ни",
     "findUsMapTitle": "Нашето местоположение",
@@ -201,7 +250,21 @@
   "footer": {
     "about": "Инженерно съвършенство на колела. Ние сме водещият Formula Student отбор на ТУ София, който разширява границите на иновациите и представянето.",
     "awards": "1 награда",
-    "carsBuilt": "3 създадени коли"
+    "carsBuilt": "3 създадени коли",
+    "quickLinks": {
+      "title": "Бързи връзки",
+      "home": "Начало",
+      "about": "За нас",
+      "ourCars": "Нашите коли",
+      "team": "Екип",
+      "sponsors": "Спонсори",
+      "contact": "Контакти"
+    },
+    "getInTouch": {
+      "title": "Свържете се с нас",
+      "headquarters": "Главен офис",
+      "address": "Блок 9 на Техническия университет София\nбул. Климент Охридски 8, 1756 София, България"
+    }
   },
 
   "forms": {
@@ -222,5 +285,10 @@
     "applyNow": "Кандидатствай сега",
     "becomeSponsor": "Станете спонсор",
     "joinOurTeam": "Присъедини се към нашия екип"
+  },
+
+  "services": {
+    "title": "Нашите услуги",
+    "description": "Открийте услугите, предлагани от FST екипа."
   }
 }
