Refactor footer component and add SponsorCarousel; update car details and translations

--- a/frontend/src/i18n/bg.json
+++ b/frontend/src/i18n/bg.json
@@ -142,7 +142,7 @@
     "badge": "НАШИТЕ КОЛИ",
     "pageTitle": "Състезателни коли Formula Student",
     "pageDescription": "Инженерното съвършенство се среща със състезателния дух. Разгледайте нашите високопроизводителни автомобили с двигатели с вътрешно горене, проектирани и изградени от студентски инженери.",
-    "engineBadge": "Двигател",
+    "engineBadge": "ДВГ",
     "technicalSpecifications": "Технически характеристики",
     "achievementLabel": "Постижение",
     "topSpeed": "Максимална скорост",
