--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -142,7 +142,7 @@
     "badge": "OUR CARS",
     "pageTitle": "Formula Student Racing Cars",
     "pageDescription": "Engineering excellence meets competitive racing. Explore our high-performance combustion engine vehicles designed and built by student engineers.",
-    "engineBadge": "Engine",
+    "engineBadge": "Combustion Engine",
     "technicalSpecifications": "Technical Specifications",
     "achievementLabel": "Achievement",
     "topSpeed": "Top Speed",
