Translation changes part 2

--- a/frontend/src/i18n/bg.json
+++ b/frontend/src/i18n/bg.json
@@ -153,7 +153,8 @@
     "timelineTitle": "Хронология на отбора",
     "timelineDescription": "Запознайте се с нашата история, за да видите ключовите моменти и постижения",
     "yearsLabel": "Години",
-    "keyAchievementsTitle": "Ключови постижения"
+    "keyAchievementsTitle": "Ключови постижения",
+    "comingSoon": "Тази секция скоро ще бъде добавена!"
   },
 
   "team": {
@@ -256,7 +257,18 @@
     "becomeSponsor": "Станете спонсор",
     "makeDonation": "Направете дарение",
     "followUsTitle": "Последвайте ни в социалните мрежи",
-    "followUsDescription": "Бъдете в течение с последните новини, резултати от състезания и задкулисни материали."
+    "followUsDescription": "Бъдете в течение с последните новини, резултати от състезания и задкулисни материали.",
+    "social": {
+      "title": "Следвайте ни в социалните мрежи",
+      "description": "Бъдете в течение с нашите новини, резултати от състезания и задкулисни материали.",
+      "find": "Намерете ни"
+    },
+    "support": {
+      "title": "Подкрепете нашия състезателен отбор",
+      "description": "Вашата подкрепа ни помага да изграждаме конкурентоспособни състезателни автомобили и да развиваме следващото поколение инженери. Обмислете да станете спонсор на отбора или да направите дарение.",
+      "becomeSponsor": "Станете Спонсор",
+      "makeDonation": "Направете Дарение"
+    }
   },
 
   "gallery": {
@@ -323,5 +335,10 @@
   "services": {
     "title": "Нашите услуги",
     "description": "Открийте услугите, предлагани от екипа на FST."
+  },
+
+  "footer-sponsors": {
+    "title": "Нашите Спонсори",
+    "btn": "Станете Спонсор"
   }
 }
