--- a/frontend/src/i18n/bg.json
+++ b/frontend/src/i18n/bg.json
@@ -17,7 +17,7 @@
     "becomePartnerDescription": "Желаете ли да развиете Вашия бранд? Попълнете формата по-долу и нека заедно създадем нещо иновативно",
     "tiers": {
       "title": {
-        "name": "Титулярен спонсор",
+        "name": "Платинъм спонсор",
         "description": "Основни партньори, които движат успеха ни"
       },
       "gold": {
