--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -18,7 +18,7 @@
     "becomePartnerDescription": "Ready to accelerate your brand with us? Fill out the form below and let's create something innovative together",
     "tiers": {
       "title": {
-        "name": "Title Sponsor",
+        "name": "Platinum Sponsor",
         "description": "Our premier partners who drive our success"
       },
       "gold": {
