Update Bulgarian translations for home and contact
Changed 'ТУ София' to 'TU Sofia' in the home section and updated 'Главен офис' to 'Работилница' in the contact section for improved clarity and consistency.

--- a/frontend/src/i18n/bg.json
+++ b/frontend/src/i18n/bg.json
@@ -49,7 +49,7 @@
   },
   "home": {
     "since": "Основан 2015",
-    "titleLine1": "ТУ София",
+    "titleLine1": "TU Sofia",
     "titleLine2": "Racing Team",
     "subtitle": "Инженерни иновации и шампионски дух.",
     "buttons": {
@@ -317,7 +317,7 @@
     },
     "getInTouch": {
       "title": "Свържете се с нас",
-      "headquarters": "Главен офис",
+      "headquarters": "Работилница",
       "address": "Блок 9 на Техническия университет София\nбул. Климент Охридски 8, 1756 София, България"
     }
   },
